--- a/.github/workflows/boost_math_test_qemu.yml
+++ b/.github/workflows/boost_math_test_qemu.yml
@@ -43,8 +43,59 @@ jobs:
           echo
           ${{ matrix.compiler }} -v
           echo Compile project boost_math_test_qemu
-          ${{ matrix.compiler }} -std=${{ matrix.standard }} -Wall -Wpedantic -Wextra -Wconversion -Wsign-conversion -Wundef boost_math_test_qemu_cbrt_tgamma.cpp -I. -I../boost-root -o boost_math_test_qemu.exe
+          ${{ matrix.compiler }} -std=${{ matrix.standard }} -Wall -Wpedantic -Wextra -Wconversion -Wsign-conversion -Wundef -O2 -I. -I../boost-root boost_math_test_qemu_cbrt_tgamma.cpp -o boost_math_test_qemu.exe
           ls -la boost_math_test_qemu.exe
           echo Run project boost_math_test_qemu.exe
           ./boost_math_test_qemu.exe
+        working-directory: ./
+  ubuntu-boost-math-test-qemu:
+    runs-on: ubuntu-22.04
+    defaults:
+      run:
+        shell: bash
+    strategy:
+      fail-fast: false
+      matrix:
+        standard: [ c++14 ]
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: '0'
+      - name: clone-submods-bootstrap-headers-boost-develop
+        run: |
+          git clone -b develop --depth 1 https://github.com/boostorg/boost.git ../boost-root
+          cd ../boost-root
+          git submodule update --init tools
+          git submodule update --init libs/config
+          git submodule update --init libs/math
+          git submodule update --init libs/multiprecision
+          ./bootstrap.sh
+          ./b2 headers
+        working-directory: ./
+      - name: update-tools
+        run: |
+          sudo apt install libncurses5 libpython2.7
+          mkdir -p emu_env && cd emu_env
+          wget --no-check-certificate https://armkeil.blob.core.windows.net/developer/Files/downloads/gnu-rm/10.3-2021.10/gcc-arm-none-eabi-10.3-2021.10-x86_64-linux.tar.bz2
+          tar -xvf gcc-arm-none-eabi-10.3-2021.10-x86_64-linux.tar.bz2
+          wget --no-check-certificate https://github.com/xpack-dev-tools/qemu-arm-xpack/releases/download/v7.1.0-1/xpack-qemu-arm-7.1.0-1-linux-x64.tar.gz
+          tar -xvzf xpack-qemu-arm-7.1.0-1-linux-x64.tar.gz
+        working-directory: ./
+      - name: build-target-stm32f429
+        run: |
+          mkdir -p bin
+          emu_env/gcc-arm-none-eabi-10.3-2021.10/bin/arm-none-eabi-g++ -std=${{ matrix.standard }} -Wall -Wextra -Wpedantic -O2 -g -gdwarf-2 -ffunction-sections -fdata-sections -x c++ -fno-rtti -fno-use-cxa-atexit -fno-exceptions -fno-nonansi-builtins -fno-threadsafe-statics -fno-enforce-eh-specs -ftemplate-depth=32 -mcpu=cortex-m4 -mtune=cortex-m4 -mthumb -mfloat-abi=soft -mno-unaligned-access -mno-long-calls -I. -I../boost-root ./boost_math_test_qemu_cbrt_tgamma.cpp ./target/micros/stm32f429/make/single/crt.cpp ./target/micros/stm32f429/make/single/mcal_gcc_cxx_completion.cpp -nostartfiles -Wl,--gc-sections -Wl,-Map,./bin/boost_math_test_qemu.map -T ./target/micros/stm32f429/make/stm32f429.ld -Wl,--print-memory-usage --specs=nano.specs --specs=nosys.specs -o ./bin/boost_math_test_qemu.elf
+          emu_env/gcc-arm-none-eabi-10.3-2021.10/bin/arm-none-eabi-objcopy ./bin/boost_math_test_qemu.elf -O ihex ./bin/boost_math_test_qemu.hex
+          ls -la ./bin/boost_math_test_qemu.elf ./bin/boost_math_test_qemu.hex ./bin/boost_math_test_qemu.map
+        working-directory: ./
+      - name: emulate-target-stm32f429
+        run: |
+          ./emu_env/xpack-qemu-arm-7.1.0-1/bin/qemu-system-gnuarmeclipse --verbose --mcu STM32F429ZI --nographic --gdb tcp::9999 -d unimp,guest_errors &
+        working-directory: ./
+      - name: run-test-on-target
+        run: |
+          ./emu_env/gcc-arm-none-eabi-10.3-2021.10/bin/arm-none-eabi-gdb-py ./bin/boost_math_test_qemu.elf -x ./target/build/boost_math_test_qemu.py
+          qemu_result=$?
+          echo "qemu_result" "$qemu_result"
+          echo "qemu_result" "$qemu_result" | grep 'qemu_result 0'
         working-directory: ./
