--- a/boost_math_test_qemu.vcxproj
+++ b/boost_math_test_qemu.vcxproj
@@ -145,10 +145,26 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="boost_math_test_qemu_cbrt_tgamma.cpp" />
+    <ClCompile Include="target\micros\stm32f429\make\single\crt.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="target\micros\stm32f429\make\single\mcal_gcc_cxx_completion.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="boost_math_test_qemu.h" />
     <ClInclude Include="boost_math_test_qemu_detail.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="target\build\boost_math_test_qemu.py" />
+    <None Include="target\micros\stm32f429\make\stm32f429.ld" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
