--- a/.github/workflows/boost_math_test_qemu.yml
+++ b/.github/workflows/boost_math_test_qemu.yml
@@ -43,7 +43,7 @@ jobs:
           echo
           ${{ matrix.compiler }} -v
           echo Compile project boost_math_test_qemu
-          ${{ matrix.compiler }} -std=${{ matrix.standard }} -Wall -Wpedantic -Wextra -Wconversion -Wsign-conversion -Wundef -O2 -I. -I../boost-root ./boost_math_test_qemu.cpp ./boost_math_test_qemu_cbrt_cpp_bin_float.cpp ./boost_math_test_qemu_cbrt_cpp_dec_float.cpp ./boost_math_test_qemu_cbrt_tgamma.cpp -o boost_math_test_qemu.exe
+          ${{ matrix.compiler }} -std=${{ matrix.standard }} -Wall -Wpedantic -Wextra -Wconversion -Wsign-conversion -Wundef -O2 -I. -I../boost-root ./boost_math_test_qemu.cpp ./boost_math_test_qemu_cbrt_cpp_bin_float.cpp ./boost_math_test_qemu_cbrt_cpp_dec_float.cpp ./boost_math_test_qemu_cbrt_tgamma.cpp ./boost_math_test_qemu_cyl_bessel_j.cpp -o boost_math_test_qemu.exe
           ls -la boost_math_test_qemu.exe
           echo Run project boost_math_test_qemu.exe
           ./boost_math_test_qemu.exe
